# template-fastapi

./: pyproject.toml
scripts/: run.sh
template_fastapi/: main.py
tests/: test_main.py
